5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1764_1189.log
== TEST (2019-05-24 16:55:07) 
-- CODE:
from numpy import*

vet= str(eval(input("Digite: "))
			



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:55:28) 
-- CODE:
from numpy import*

vet= eval(input("Digite: "))
			
			



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:59:01) 
-- CODE:
from numpy import*

vet= eval(input("Digite: "))

while (vet[0]==vet[-1]):
	elif(vet[1]==vet[-2]):
		elif(vet[2]==vet[-3]):
			elif(vet[3]==vet(-4):
				  print('1')
else:
				  print('0')
			
			



-- ERROR:
File "XXXX", line 6
    elif(vet[1]==vet[-2]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 16:59:44) 
-- CODE:
from numpy import*

vet= eval(input("Digite: "))replace()

while (vet[0]==vet[-1]):
	elif(vet[1]==vet[-2]):
		elif(vet[2]==vet[-3]):
			elif(vet[3]==vet(-4):
				  print('1')
else:
				  print('0')
			
			



-- ERROR:
File "XXXX", line 3
    vet= eval(input())replace()
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:00:03) 
-- CODE:
from numpy import*

vet= replace(eval(input("Digite: ")))

while (vet[0]==vet[-1]):
	elif(vet[1]==vet[-2]):
		elif(vet[2]==vet[-3]):
			elif(vet[3]==vet(-4):
				  print('1')
else:
				  print('0')
			
			



-- ERROR:
File "XXXX", line 6
    elif(vet[1]==vet[-2]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:00:36) 
-- CODE:
from numpy import*

vet= replace(eval(input("Digite: ")))

while (vet[0] == vet[-1]):
	elif(vet[1] == vet[-2]):
		elif(vet[2] == vet[-3]):
			elif(vet[3] == vet(-4):
				  print('1')
else:
				  print('0')
			
			



-- ERROR:
File "XXXX", line 6
    elif(vet[1] == vet[-2]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:00:55) 
-- CODE:
from numpy import*

vet= replace(eval(input("Digite: ")))

while (vet[0] == vet[-1]):
	elif(vet[1] == vet[-2]):
	elif(vet[2] == vet[-3]):
	elif(vet[3] == vet(-4):
		 print('1')
else:
	 print('0')
			
			



-- ERROR:
File "XXXX", line 6
    elif(vet[1] == vet[-2]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 17:01:03) 
-- CODE:
from numpy import*

vet= replace(eval(input("Digite: ")))

while (vet[0] == vet[-1]):
	elif(vet[1] == vet[-2]):
	elif(vet[2] == vet[-3]):
	elif(vet[3] == vet(-4):
		 print('1')
else:
	 print('0')
			
			



-- EXECUTION TIME:
0.165512
-- ERROR:
  File "/home/codebench/codes/1764/1189/main.py", line 6
    elif(vet[1] == vet[-2]):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 16:09:10) 
-- CODE:
from numpy import*
S = input("digite uma string:")
k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
			



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 16:09:12) 
-- CODE:
from numpy import*
S = input("digite uma string:")
k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
			



-- EXECUTION TIME:
0.524308
-- TEST CASE 1:
---- input:
ACARARAJADADAJARARACA
---- correct output:
ACARARAJADADAJARARACA
1
---- user output:
ACARARAJADADAJARARACA
1
-- TEST CASE 2:
---- input:
CACHORRO
---- correct output:
CACHORRO
0
---- user output:
CACHORRO
0
-- TEST CASE 3:
---- input:
amalanadanalama
---- correct output:
AMALANADANALAMA
1
---- user output:
AMALANADANALAMA
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:54:16) 
-- CODE:
from numpy import*
S = input("Digite uma string: ")
k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
			



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:55:26) 
-- CODE:
from numpy import*
S = input("Digite uma string: ")
k = ""
i = 0
while(i < len(S)):
	if(S[i] != " "):
		k = k + S[i]
	i = i + 1
print(k.upper())

j = ""
i = -1 
while(i >= -len(S)):
	if(S[i] != " "):
		j = j + S[i]
	i = i - 1
n = 0
if(j == k):
	n = n + 1
print(n)
			



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
